--- a/Lesson 2/File IO.ipynb
+++ b/Lesson 2/File IO.ipynb
@@ -5887,48 +5887,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HDF5 Files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import h5py\n",
-    "filename = 'BT_thinsection_avgs_xotes.hdf'\n",
-    "hdf = h5py.File(filename, 'r')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-71-91e0735c74e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mhf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5py\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'BT_thinsection_avgs_xotes.hdf'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'name'"
-     ]
-    }
-   ],
-   "source": [
-    "hf = h5py.File('BT_thinsection_avgs_xotes.hdf', 'r')\n",
-    "dir(hf).name"
+    "## HDF5 Files\n",
+    "\n",
+    "TODO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
